<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sports video analyzer</string>
    <string name="local_video_list">Local Videos</string>
    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_record">Record New</string>
    <string name="action_play_file">Play Local file</string>
    <string name="action_play_live">Play Live stream</string>
    <string name="action_connect">GoPro Connect</string>
    <string name="title_activity_play_back">PlayBackActivity</string>
    <string name="title_activity_gopro_live">GoPro Live</string>
    <string name="title_activity_video_playback_full">VideoPlaybackFull</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="password_hint">Password</string>

</resources>
